--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
  
-  "name": "Blind Twitter",
-  "version": "0.1.0",
-  "description": "Strips Twitter of all identity information (names, photos)... and leaves just the content.",
+  "name": "Blind Taste Test Twitter",
+  "version": "0.4.0",
+  "description": "Blurs all identity information on Twitter.",
 
  
   "content_scripts": [{
